fix alignment of .entry-content in 768px+ media query

--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -68,8 +68,7 @@
 
 @media (min-width: 768px) {
 	.entry-content {
-		display: flex;
-		flex-direction: row;
+		@include flex-row;
 	}
 
 	.card {
